Still trying to find correct spacing for mobile view on photos.

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -313,7 +313,7 @@ p {
 		width: 75px;
 		height: 75px;
 		margin: 5px;
-		margin-left: 10px;
+		margin-left: 15px;
 	}
 }
 
